--- a/library.properties
+++ b/library.properties
@@ -6,4 +6,4 @@ sentence=modbus
 paragraph=supports modbus IP RTU.
 category=Communication
 url=https://github.com/OS-Q/D96
-architectures=*
+architectures=esp8266,esp32
