--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,10 @@
-name=modbus
-version=1.0.0
-author= qitas
-maintainer=qitas@qitas.cn
-sentence=modbus
-paragraph=supports modbus IP RTU.
-category=Communication
-url=https://github.com/OS-Q/D96
-architectures=esp8266,esp32
+name          = serial
+version       = 1.1.0
+author        = qitas
+maintainer    = qitas@qitas.cn
+sentence      = serial
+paragraph     = Arduino software serial for ESP8266/ESP32,supports modbus.
+category      = Communication
+url           = https://github.com/OS-Q/D96
+architectures = esp8266,esp32
+license       = MIT
