--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name          = serial
+name          = BAUD
 version       = 1.1.0
 author        = qitas
 maintainer    = qitas@qitas.cn
-sentence      = serial
-paragraph     = Arduino software serial for ESP8266/ESP32,supports modbus.
+sentence      = BAUD
+paragraph     = Arduino serial for ESP8266/ESP32,supports modbus.
 category      = Communication
 url           = https://github.com/OS-Q/D96
 architectures = esp8266,esp32
